[gd_scene load_steps=4 format=3 uid="uid://b26ahwphkhc5i"]

[ext_resource type="Script" path="res://sidescroller/sidescroller_main.gd" id="1_gh6ur"]
[ext_resource type="PackedScene" uid="uid://cjj14c7n0y063" path="res://sidescroller/actors_2d/alisa.tscn" id="2_kneeq"]
[ext_resource type="PackedScene" uid="uid://dw3g5pxi0kexq" path="res://assets/stages/horizon_hills_small_cave.tscn" id="2_p8j2h"]

[node name="Main" type="Node2D"]
script = ExtResource("1_gh6ur")
player_actor = ExtResource("2_kneeq")
initial_stage = ExtResource("2_p8j2h")

[node name="CameraTransformer" type="RemoteTransform2D" parent="."]
unique_name_in_owner = true
position = Vector2(-712, 512)
remote_path = NodePath("../GameplayCamera")

[node name="GameplayCamera" type="Camera2D" parent="."]
unique_name_in_owner = true
position = Vector2(-712, 512)
current = true
limit_left = -800
limit_top = -500
limit_right = 2700
limit_bottom = 600
smoothing_enabled = true
smoothing_speed = 6.0
drag_vertical_enabled = true
drag_top_margin = 0.3
drag_bottom_margin = 0.3
editor_draw_limits = true

[node name="TransitionCamera" type="Camera2D" parent="."]
unique_name_in_owner = true
position = Vector2(-712, 512)
limit_left = -800
limit_top = -500
limit_right = 2700
limit_bottom = 600
smoothing_enabled = true
smoothing_speed = 6.0
drag_vertical_enabled = true
drag_top_margin = 0.3
drag_bottom_margin = 0.3
editor_draw_limits = true

[node name="ActorsParent" type="Node2D" parent="."]
unique_name_in_owner = true
